--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-*/credentials.json
-*/token.json
-*/.env
-*/__pycache__/
-*/*/__pycache__/
+*credentials.json
+*token.json
+*.env
+*__pycache__/
 ai/
+cp/
